Fix signup/login alignment and user image

--- a/src/assets/styles/views/LoginPage.scss
+++ b/src/assets/styles/views/LoginPage.scss
@@ -7,6 +7,10 @@
     position: relative;
     overflow: auto;
 
+    @include for-mobile-layout {
+        grid-template-columns: 1fr;
+    }
+
     & .rect {
         display: flex;
         height: em(40px);
@@ -21,7 +25,7 @@
 
     .login-signup-container {
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
         height: 100%;
         align-items: center;
     }
@@ -66,8 +70,21 @@
                 height: 50%;
             }
         }
-
-
+        .avatar-upload {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        
+        .avatar-image {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            margin-bottom: em(8px); 
+        }
+        
 
         & .google-login {
             font-family: figtree;
